# f1-predict

./: .gitignore  README.md  railway.json
backend/: .env.example  Dockerfile  f1predict.db  pyproject.toml  railway.json
backend/app/: config.py  database.py  dependencies.py  enums.py  main.py
backend/app/ingestion/: data_sync.py  fastf1_client.py  jolyon_client.py  weather_client.py
backend/app/ml/: features.py  model_store.py  models.py  prediction_service.py  statistical_predictor.py  training.py
backend/app/models/: __init__.py  f1.py  prediction.py  training_data.py  user.py
backend/app/routers/: admin.py  auth.py  leaderboard.py  predictions.py  races.py  users.py
backend/app/scheduler/: jobs.py
backend/app/schemas/: auth.py  prediction.py  race.py
backend/app/services/: auth.py  score_calculator.py  scoring.py  seeder.py
backend/f1_predict_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_auth.py  test_fastf1_client.py  test_features.py  test_jolyon_client.py  test_leaderboard.py  test_models.py  test_prediction_service.py  test_predictions.py  test_scheduler.py  test_scoring.py  test_seeder.py  test_weather_client.py
docs/superpowers/plans/: 2026-03-27-backend-api.md  2026-03-27-frontend.md  2026-03-27-ml-pipeline.md
docs/superpowers/specs/: 2026-03-27-f1-predict-design.md
frontend/: .env.example  .env.local  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/hooks/: useCountdown.ts  (+3 more)
(+47 files in other folders)
